Added hero type selection option
From options menu you can select the hero type for player and enemy NPC/AI. This will set one of the hero type boolean variable.
The bool variable names you can refer is as follows:
HeroTypes.isPlayerHeroAttackType
HeroTypes.isPlayerHeroDefenseType
HeroTypes.isPlayerHeroRangeType

HeroTypes.isEnemyHeroAttackType
HeroTypes.isEnemyHeroDefenseType
HeroTypes.isEnemyHeroRangeType

You can use these bool variables to increase attack/defense/range parameters of their unit.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Resources\TacticsMove.cs" />
      <Compile Include="Assets\Resources\Tile.cs" />
      <Compile Include="Assets\Resources\TurnManager.cs" />
+     <Compile Include="Assets\StartPanel\HeroTypes.cs" />
      <Compile Include="Assets\StartPanel\MainMenu.cs" />
      <Compile Include="Assets\StartPanel\OptionsMenu.cs" />
      <Compile Include="Assets\StartPanel\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
