--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GameManager.cs" />
+     <Compile Include="Assets\GameOverScene.cs" />
      <Compile Include="Assets\NPCAnimController.cs" />
      <Compile Include="Assets\PlayerAnimController.cs" />
      <Compile Include="Assets\PlayerAnimR1.cs" />
